--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "gl-matrix": "^3.3.0"
   }
 }
